[package]
name = "xds-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", path = "../tonic", features = ["tls-ring", "transport", "codegen"] }
tonic-prost = { version = "0.14", path = "../tonic-prost" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytes = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"
dotenvy = "0.15"

[build-dependencies]
tonic-build = { version = "0.14", path = "../tonic-build", features = ["transport"] }
tonic-prost-build = { version = "0.14", path = "../tonic-prost-build" }
